--- a/style.css
+++ b/style.css
@@ -136,7 +136,9 @@ main {
 
 #create-game,
 #join-game,
-#play-offline {
+#pass-and-play-btn,
+#play-with-friend-btn,
+#pass-and-play-btn {
   transform: none;
 }
 
@@ -486,7 +488,8 @@ main {
   }
 }
 
-.multiplayer-menu {
+.multiplayer-menu,
+.initial-menu {
   margin: 2rem 0;
   padding: 1rem;
   text-align: center;
@@ -494,7 +497,8 @@ main {
   border-radius: 1rem;
 }
 
-.multiplayer-menu .btn {
+.multiplayer-menu .btn,
+.initial-menu .btn {
   margin: 1rem;
   padding: 0.7rem 1.4rem;
   font-size: 1.2rem;
