--- a/style.css
+++ b/style.css
@@ -134,11 +134,23 @@ main {
   box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
 }
 
+.btn--back {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.4rem;
+  z-index: 10;
+}
+
 #create-game,
 #join-game,
 #pass-and-play-btn,
 #play-with-friend-btn,
-#pass-and-play-btn {
+#pass-and-play-btn,
+#joining-btn,
+#back-to-initial-menu,
+#back-to-multiplayer-menu {
   transform: none;
 }
 
@@ -489,7 +501,8 @@ main {
 }
 
 .multiplayer-menu,
-.initial-menu {
+.initial-menu,
+.join-game {
   margin: 2rem 0;
   padding: 1rem;
   text-align: center;
@@ -498,7 +511,8 @@ main {
 }
 
 .multiplayer-menu .btn,
-.initial-menu .btn {
+.initial-menu .btn,
+.join-game .btn {
   margin: 1rem;
   padding: 0.7rem 1.4rem;
   font-size: 1.2rem;
